--- a/.github/workflows/arduino_ci.yaml
+++ b/.github/workflows/arduino_ci.yaml
@@ -14,7 +14,7 @@ jobs:
       - uses: arduino/compile-sketches@v1
         with:
           fqbn: "arduino:avr:mega:cpu=atmega2560"
-          libraries:
+          libraries: |
             - name: Rosserial Arduino Library
               version: 0.7.9
             - name: Adafruit BNO055
