use cpplint directry
Signed-off-by: Daisuke Sato <daisukes@cmu.edu>

--- a/.github/workflows/arduino_ci.yaml
+++ b/.github/workflows/arduino_ci.yaml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   arduino_ci:
+    needs: cpplint
     runs-on: ubuntu-20.04
     strategy:
       matrix:
@@ -32,17 +33,11 @@ jobs:
   cpplint:
     runs-on: ubuntu-latest
     steps:
-      - name: Setup ament_cpplint
+      - name: Setup cpplint
         run: |
-          sudo apt install software-properties-common
-          sudo add-apt-repository universe
-          sudo apt update && sudo apt install curl -y
-          sudo curl -sSL https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -o /usr/share/keyrings/ros-archive-keyring.gpg
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/ros-archive-keyring.gpg] \
-            http://packages.ros.org/ros2/ubuntu $(. /etc/os-release && echo $UBUNTU_CODENAME) main" | sudo tee /etc/apt/sources.list.d/ros2.list > /dev/null
-          apt update && apt install -y ros-galactic-ament-cpplint
+          sudo apt install python3-pip
+          pip install cpplint
       - uses: actions/checkout@v3
-      - name: Run ament_cpplint
+      - name: Run cpplint
         run: |
-          source /opt/ros/galactic/setup.bash
-          ament_cpplint .
+          cpplint --recursive .
