--- a/.github/workflows/arduino_ci.yaml
+++ b/.github/workflows/arduino_ci.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   arduino_ci:
-    needs: cpplint
+    needs: [ cpplint, uncrustify ]
     runs-on: ubuntu-20.04
     strategy:
       matrix:
